z-index in fix process

--- a/src/sass/sections/_dice.scss
+++ b/src/sass/sections/_dice.scss
@@ -5,11 +5,12 @@
 }
 
 .dice {
-    // position: relative;
+    position: relative;
     width: 100px;
     height: 100px;
     transform-style: preserve-3d;
     transition: 1s ease;
+    z-index: -1;
 }
 
 @keyframes rolling {
@@ -31,6 +32,7 @@
     transform-style: preserve-3d;
     background: linear-gradient(145deg, $button-secondary-color, $white-color);
     box-shadow: 0 1px 3px #6b48f21f, 0 1px 2px #6b48f23d;
+    z-index: -1;
 }
 
 .face::before {
